--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -12,6 +12,7 @@ public class AccountHandler {
         catch (DmlException e) {
             System.debug('A DML exception has occurred: ' + e.getMessage());
             return NULL;
+            // Test
         }
     }
 }
